--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 			</div>
 			<div class="p-4 ">
 				<div class="w-100 d-flex justify-content-center p-2">
-					<img src="~/images/Worms.png" alt="" class="imgUser rounded-circle" />
+					<img src="~/images/Worms.png" alt="" class="imgUser rounded-circle pulse" />
 				</div>
 				<div class="w-100 d-flex justify-content-center" style="text-align:center;">
 					<h1><a href="index.html" class="logo">Administrador<span>Orlando Pinto</span></a></h1>
@@ -68,7 +68,7 @@
 							</a>
 						</div>
 						<div class="flex-shrink-1">
-							<ul class="navbar-nav mr-auto d-flex flex-row-reverse w-100 pt-2">
+							<ul class="navbar-nav mr-auto d-flex flex-row-reverse w-100 pt-2 pulse-menu">
 								<li class="nav-item"><a class="nav-link" href="#" data-toggle="modal" data-target="#fullHeightModalRight"><i class="fas fa-cog"></i></a></li>
 								<li class="nav-item dropdown">
 									<a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bell"></i></a>
