--- a/Views/Paises/Create.cshtml
+++ b/Views/Paises/Create.cshtml
@@ -15,7 +15,7 @@
 		<h4>Paises</h4>
 	</div>
 	<div class="pr-2">
-		<a class="btn btn-primary" asp-action="Index">Volver a la lista</a>
+		<a class="btn btn-primary btn-sm" asp-action="Index">Volver a la lista</a>
 	</div>
 </div>
 <hr />
@@ -29,7 +29,7 @@
 				<span asp-validation-for="Pais" class="text-danger aspValidationFor"> </span>
 			</div>
 			<div class="form-group d-flex justify-content-end">
-				<input type="submit" value="Crear" class="btn btn-primary createButton" />
+				<input type="submit" value="Crear" class="btn btn-primary btn-sm createButton" />
 			</div>
 		</form>
 	</div>
