--- a/Views/Regiones/Edit.cshtml
+++ b/Views/Regiones/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model ASP.NET_CORE_WEB_SITE.Models.Regiones
+﻿@model ASP.NET_CORE_CLASS_MODELS.Regiones
 
 @{
-	ViewData["Title"] = "Create";
+	ViewData["Title"] = "Edit";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row d-flex justify-content-center w-100">
 	<div>
-		<h1>Crear</h1>
+		<h1>Actualizar</h1>
 	</div>
 </div>
 <div class="row d-flex justify-content-between align px-3">
@@ -21,7 +21,7 @@
 <hr />
 <div class="row d-flex justify-content-center pt-5">
 	<div class="col-md-4 card pt-5">
-		<form asp-action="Create">
+		<form asp-action="Edit">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="select">
 				<select class="select-text" required>
@@ -29,6 +29,11 @@
 					@{
 						foreach (var item in (IEnumerable<ASP.NET_CORE_CLASS_MODELS.Paises>)ViewData["Paises"])
 						{
+							if (item.PaisID == Model.PaisID)
+							{
+								<option selected value="@item.PaisID">@item.Pais</option>
+
+							}
 							<option value="@item.PaisID">@item.Pais</option>
 						}
 					}
@@ -41,21 +46,25 @@
 				<label asp-for="PaisID" class="md-form-label"></label>
 				<input asp-for="PaisID" id="PaisID" class="form-control" required />
 			</div>
-			<div class="md-form">
-				<label asp-for="Region" class="md-form-label"></label>
-				<input asp-for="Region" id="Region" class="form-control" required />
-				<span asp-validation-for="Region" class="text-danger aspValidationFor"> </span>
+			<div class="md-form" style="display:none;">
+				<label asp-for="RegionID" class="control-label"></label>
+				<input asp-for="RegionID" class="form-control" />
+				<span asp-validation-for="RegionID" class="text-danger"></span>
 			</div>
-			<div class="form-group d-flex justify-content-end">
-				<input type="submit" value="Crear" class="btn btn-primary btn-sm createButton" />
+			<div class="md-form">
+				<label asp-for="Region" class="control-label"></label>
+				<input asp-for="Region" class="form-control" />
+				<span asp-validation-for="Region" class="text-danger"></span>
+			</div>
+			<div class="form-group d-flex justify-content-end ">
+				<input type="submit" value="Actualizar" class="btn btn-primary btn-sm updateButton" />
 			</div>
 		</form>
 	</div>
 </div>
-
 <script>
 	$(document).ready(function () {
-		$('.createButton').click(function () {
+		$('.updateButton').click(function () {
 			setTimeout(function () {
 				if ($('#Region').val() == '')
 					$('.aspValidationFor').text('El campo Región es obligatorio');
@@ -71,13 +80,9 @@
 </script>
 
 @await Html.PartialAsync("~/Views/Shared/ShowMessage.cshtml")
-@if (ViewData["Error"] == null)
-{
-	<script>
-		$('#Region').val('');
-	</script>
-}
 
 @section Scripts {
 	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
