--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1,3 +1,155 @@
+.custom-switch {
+	padding-left: 2.25rem
+}
+
+	.custom-switch .custom-control-label::before {
+		left: -2.25rem;
+		width: 1.75rem;
+		pointer-events: all;
+		border-radius: .5rem
+	}
+
+	.custom-switch .custom-control-label::after {
+		top: calc(.25rem + 2px);
+		left: calc(-2.25rem + 2px);
+		width: calc(1rem - 4px);
+		height: calc(1rem - 4px);
+		background-color: #adb5bd;
+		border-radius: .5rem;
+		transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+		transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+		transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out
+	}
+
+@media (prefers-reduced-motion:reduce) {
+	.custom-switch .custom-control-label::after {
+		transition: none
+	}
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+	background-color: #fff;
+	-webkit-transform: translateX(.75rem);
+	transform: translateX(.75rem)
+}
+
+.custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
+	background-color: rgba(0,123,255,.5)
+}
+
+.switch label {
+	cursor: pointer
+}
+
+	.switch label input[type=checkbox] {
+		opacity: 0;
+		width: 0;
+		height: 0
+	}
+
+		.switch label input[type=checkbox]:checked + .lever {
+			background-color: #dccfe2
+		}
+
+			.switch label input[type=checkbox]:checked + .lever:after {
+				left: 1.5rem;
+				background-color: #a6c
+			}
+
+		.switch label input[type=checkbox]:checked:not(:disabled) ~ .lever:active:after {
+			box-shadow: 0 .0625rem .1875rem .0625rem rgba(0,0,0,.4),0 0 0 .9375rem rgba(170,102,204,.1)
+		}
+
+		.switch label input[type=checkbox]:not(:disabled) ~ .lever:active:after {
+			box-shadow: 0 .0625rem .1875rem .0625rem rgba(0,0,0,.4),0 0 0 .9375rem rgba(0,0,0,.08)
+		}
+
+		.switch label input[type=checkbox]:disabled + .lever {
+			cursor: default
+		}
+
+			.switch label input[type=checkbox]:disabled + .lever:after, .switch label input[type=checkbox]:disabled:checked + .lever:after {
+				background-color: #bdbdbd
+			}
+
+	.switch label .lever {
+		position: relative;
+		display: inline-block;
+		margin: 0 1rem;
+		margin-right: .625rem;
+		vertical-align: middle;
+		content: "";
+		background-color: #818181;
+		border-radius: .9375rem;
+		width: 2.5rem;
+		height: .9375rem;
+		transition: background .3s ease
+	}
+
+		.switch label .lever:after {
+			position: absolute;
+			top: -.1875rem;
+			left: -.3125rem;
+			display: inline-block;
+			content: "";
+			background-color: #f1f1f1;
+			border-radius: 1.3125rem;
+			box-shadow: 0 .0625rem .1875rem .0625rem rgba(0,0,0,.4);
+			width: 1.3125rem;
+			height: 1.3125rem;
+			transition: left .3s ease,background .3s ease,box-shadow 1s ease
+		}
+
+.switch-version {
+	position: fixed;
+	top: 300px;
+	right: 0;
+	width: 40px;
+	background: #fff;
+	-webkit-border-radius: 4px 0 0 4px;
+	border-radius: 4px 0 0 4px;
+	-webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)
+}
+
+	.switch-version a:first-child > .switch-to {
+		-webkit-border-top-left-radius: 4px;
+		border-top-left-radius: 4px
+	}
+
+	.switch-version a:last-child > .switch-to {
+		-webkit-border-bottom-left-radius: 4px;
+		border-bottom-left-radius: 4px
+	}
+
+.switch-to {
+	display: block;
+	width: 40px;
+	height: 40px;
+	background-image: url(https://mdbootstrap.com/img/logo/mdb-angular.png);
+	background-repeat: no-repeat
+}
+
+	.switch-to.active {
+		background-color: rgba(0,0,0,.15)
+	}
+
+	.switch-to.mdb-jquery {
+		background-position: 0 -40px
+	}
+
+	.switch-to.mdb-angular {
+		background-position: 0 0
+	}
+
+	.switch-to.mdb-vue {
+		background-position: 0 -80px
+	}
+
+	.switch-to.mdb-react {
+		background-position: 0 -120px
+	}
+
 /* PULSE IMAGE */
 .pulse {
 	/*margin: 100px;*/
