--- a/Views/Paises/Edit.cshtml
+++ b/Views/Paises/Edit.cshtml
@@ -15,11 +15,12 @@
         <h4>Paises</h4>
     </div>
     <div class="pr-2">
-        <a class="btn btn-primary" asp-action="Index">Volver a la lista</a>
+        <a class="btn btn-primary btn-sm" asp-action="Index">Volver a la lista</a>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-4">
+<hr />
+<div class="row d-flex justify-content-center pt-4">
+    <div class="col-md-4 card pt-3">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="md-form">
@@ -31,8 +32,8 @@
                 <input asp-for="Pais" class="form-control" />
                 <span asp-validation-for="Pais" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-end ">
+                <input type="submit" value="Actualizar" class="btn btn-primary btn-sm" />
             </div>
         </form>
     </div>
