--- a/Views/Paises/Index.cshtml
+++ b/Views/Paises/Index.cshtml
@@ -36,16 +36,19 @@
 			</thead>
 			<tbody>
 				@{
-					foreach (var item in Model)
+					if (Model != null)
 					{
-						<tr>
-							<td style="vertical-align: middle; width:30%;">@Html.DisplayFor(modelItem => item.PaisID)</td>
-							<td style="vertical-align: middle; width:30%;">@Html.DisplayFor(modelItem => item.Pais)</td>
-							<td style="text-align:center;">
-								<a href="/Paises/Edit/@item.PaisID" class="btn btn-success btn-sm p-2 mr-2"><i class="fa fa-edit fa-2x"></i></a>
-								<a class="btn btn-danger btn-sm p-2" style="width:40px;" onclick="deleteRecord('@item.PaisID')"><i class="fa fa-trash fa-2x"></i></a>
-							</td>
-						</tr>
+						foreach (var item in Model)
+						{
+							<tr>
+								<td style="vertical-align: middle; width:30%;">@Html.DisplayFor(modelItem => item.PaisID)</td>
+								<td style="vertical-align: middle; width:30%;">@Html.DisplayFor(modelItem => item.Pais)</td>
+								<td style="text-align:center;">
+									<a href="/Paises/Edit/@item.PaisID" class="btn btn-success btn-sm p-2 mr-2"><i class="fa fa-edit fa-2x"></i></a>
+									<a class="btn btn-danger btn-sm p-2" style="width:40px;" onclick="deleteRecord('@item.PaisID')"><i class="fa fa-trash fa-2x"></i></a>
+								</td>
+							</tr>
+						}
 					}
 				}
 			</tbody>
@@ -56,7 +59,7 @@
 	</div>
 	<hr />
 	<div class="d-flex justify-content-end p-2">
-		<button type="button" class="btn btn-primary btn-md" onclick="jacascript:location.href='/Paises/Create'">Nuevo</button>
+		<button type="button" class="btn btn-primary btn-sm" onclick="jacascript:location.href='/Paises/Create'">Nuevo</button>
 	</div>
 </div>
 <script src="~/js/Paises/transactions.js"></script>
